--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     }
     testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
     testCompile("org.junit.jupiter:junit-jupiter-engine:5.3.2")
+    testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.1.1")
 }
