--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,20 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     testCompile("org.springframework.boot:spring-boot-starter-test") {
         exclude group: "junit", module: "junit"
     }
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
-    testCompile("org.junit.jupiter:junit-jupiter-engine:5.3.2")
-    testCompile("de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.1.1")
-    testCompile("io.rest-assured:rest-assured:3.2.0")
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.3.2"
+    testCompile "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+    testCompile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.1.1"
+    testCompile "io.rest-assured:rest-assured:3.2.0"
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
